--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.8.18",
+    "@grpc/proto-loader": "^0.7.8",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
+    "google-protobuf": "^3.21.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
