--- a/api-authentication/package.json
+++ b/api-authentication/package.json
@@ -22,11 +22,12 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.18",
     "@grpc/proto-loader": "^0.7.8",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/common": "^10.1.0",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.1.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/microservices": "^10.1.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.1.0",
     "@prisma/client": "^5.0.0",
     "bcrypt": "^5.1.0",
     "buf": "^0.1.1",
