--- a/api-authentication/.env
+++ b/api-authentication/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="mysql://root:passwd@localhost:4500/nest_grpc"
+DATABASE_URL="mysql://root:root@localhost:8889/grpc"
 JWT_SECRET="grpc"
